# genetic-acoustic

./: .gitignore  README.md  config.yml  deap_genetic_algorithm.py  fitness_functions.py  genetic_sample.py  geometries.py  individual_base.py  individuals.py  requirements.txt  run.py  simple_evolutionary_algorithms.py  start_optimization.py  utils.py
cma_es_example/: __main__.py  main.py
comsol/: fitness_functions.py  individual_base.py  individuals.py  utils.py
comsol/geometries/: geometries.py
dev/: Comsol2dAcoustics.py  Comsol2dAcousticsStart.py  Comsol2dAcousticsStartMPI.py  Example1.py  ExampleMPI.py  empty_project1.mph  utils.py
dev/gendev/: __init__.py  models.py  solvers.py  utils.py  workers.py
empty_project/: empty_project.mph
examples/: Example1.py  Example1_MPI.py  ExampleMPI.py
examples/Comsol2dAcoustics/: Comsol2dAcoustics.py  Comsol2dAcousticsStart.py  Comsol2dAcousticsStartMPI.py  empty_project.mph  start.py  start_mpi.py
examples/Comsol3d/: Comsol3d.py  empty_project.mph  start.py  start_mpi.py  test.py  utils.py
examples/ComsolDipole/: comsol.py  empty_project.mph  optimization.py  settings.py  start.py
examples/cma_es_example/: main.py  start.py  start_mpi.py
gendev/: models.py  solvers.py  workers.py
hpctool/: pyproject.toml
hpctool/hpctool/: models.py  solvers.py  utils.py  workers.py
legacy/: genetic_sample.py  run.py  simple_evolutionary_algorithms.py  start_optimization.py
legacy/comsol/: individual_base.py
legacy/comsol/geometries/: __init__.py
