[tool.poetry]
name = "hpctool"
version = "0.1.0"
description = ""
authors = ["djiboshin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
mpi4py = "^3.1.3"
MPh = "^1.1.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
